--- a/index.html
+++ b/index.html
@@ -172,26 +172,29 @@
 
     </footer>
     <div class="background-image"></div>
-    <div class="about-us-text">
-        <p><strong>Discover the latest trends and elevate your style with 𝑬𝒍𝒆𝒈𝒂𝒏𝒄𝒆 𝒇𝒂𝒔𝒉𝒊𝒐𝒏 ✨</strong></p>
+<img src="img 0.jpg" alt="Image 0">
+<div class="about-us-text">
+    <p><strong>Discover the latest trends and elevate your style with 𝑬𝒍𝒆𝒈𝒂𝒏𝒄𝒆 𝒇𝒂𝒔𝒉𝒊𝒐𝒏 ✨</strong></p>
     <div style="font-family: Arial, sans-serif; text-align: center; padding: 20px;">
-    <h2 style="color: #333; font-size: 24px; font-weight: bold;">Discover Unparalleled Elegance</h2>
-    <p style="color: #666; font-size: 16px; line-height: 1.6;">
-        Step into a world of sartorial splendor where sophistication meets style in every stitch and seam. Our curated collection of clothing, meticulously crafted by renowned designers, offers an unparalleled fusion of luxury and comfort.
-    </p>
-    <h3 style="color: #333; font-size: 20px; font-weight: bold;">Timeless Pieces, Impeccable Craftsmanship</h3>
-    <p style="color: #666; font-size: 16px; line-height: 1.6;">
-        From tailored suits that exude power and authority to flowing dresses that embody grace and charm, each garment is a testament to the timeless allure of fine craftsmanship.
-    </p>
-    <h3 style="color: #333; font-size: 20px; font-weight: bold;">Elevate Your Ensemble</h3>
-    <p style="color: #666; font-size: 16px; line-height: 1.6;">
-        Embrace your individuality and elevate your ensemble with our exquisite range of shoes, jewelry, and accessories. Whether it's a pair of statement heels that command attention or delicate yet dazzling earrings that add a touch of glamour, our accessories are designed to complement and enhance your personal style.
-    </p>
-    <h3 style="color: #333; font-size: 20px; font-weight: bold;">Quality Reigns Supreme</h3>
-    <p style="color: #666; font-size: 16px; line-height: 1.6;">
-        Immerse yourself in a world where quality reigns supreme, where every detail is carefully considered to ensure that you not only look but also feel your best. With our commitment to excellence and dedication to customer satisfaction, we invite you to explore our collection and discover the true essence of luxury fashion.
-    </p>
+        <h2 style="color: #333; font-size: 24px; font-weight: bold;">Discover Unparalleled Elegance</h2>
+        <p style="color: #666; font-size: 16px; line-height: 1.6;">
+            Step into a world of sartorial splendor where sophistication meets style in every stitch and seam. Our curated collection of clothing, meticulously crafted by renowned designers, offers an unparalleled fusion of luxury and comfort.
+        </p>
+        <h3 style="color: #333; font-size: 20px; font-weight: bold;">Timeless Pieces, Impeccable Craftsmanship</h3>
+        <p style="color: #666; font-size: 16px; line-height: 1.6;">
+            From tailored suits that exude power and authority to flowing dresses that embody grace and charm, each garment is a testament to the timeless allure of fine craftsmanship.
+        </p>
+        <h3 style="color: #333; font-size: 20px; font-weight: bold;">Elevate Your Ensemble</h3>
+        <p style="color: #666; font-size: 16px; line-height: 1.6;">
+            Embrace your individuality and elevate your ensemble with our exquisite range of shoes, jewelry, and accessories. Whether it's a pair of statement heels that command attention or delicate yet dazzling earrings that add a touch of glamour, our accessories are designed to complement and enhance your personal style.
+        </p>
+        <h3 style="color: #333; font-size: 20px; font-weight: bold;">Quality Reigns Supreme</h3>
+        <p style="color: #666; font-size: 16px; line-height: 1.6;">
+            Immerse yourself in a world where quality reigns supreme, where every detail is carefully considered to ensure that you not only look but also feel your best. With our commitment to excellence and dedication to customer satisfaction, we invite you to explore our collection and discover the true essence of luxury fashion.
+        </p>
+    </div>
 </div>
+
 
 
     <form id="name-form" style="text-align: center;">
