--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
     <div class="background-image"></div>
 <img src="img 0.jpg" alt="Image 0">
 <div class="about-us-text">
-    <p><strong>Discover the latest trends and elevate your style with 𝑬𝒍𝒆𝒈𝒂𝒏𝒄𝒆 𝒇𝒂𝒔𝒉𝒊𝒐𝒏 ✨</strong></p>
+
     <div style="font-family: Arial, sans-serif; text-align: center; padding: 20px;">
-        <h2 style="color: #333; font-size: 24px; font-weight: bold;">Discover Unparalleled Elegance</h2>
+        <h2 style="color: #333; font-size: 24px; font-weight: bold;">Discover the latest trends and elevate your style with 𝑬𝒍𝒆𝒈𝒂𝒏𝒄𝒆 𝒇𝒂𝒔𝒉𝒊𝒐𝒏 ✨</h2>
         <p style="color: #666; font-size: 16px; line-height: 1.6;">
             Step into a world of sartorial splendor where sophistication meets style in every stitch and seam. Our curated collection of clothing, meticulously crafted by renowned designers, offers an unparalleled fusion of luxury and comfort.
         </p>
