--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             padding: 3px;
             text-align: center;
             color: black;
-            font-family: 'Waltograph', cursive;
+            font-family: 'Comic Sans MS', cursive;
         }
 
         header a {
