--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
 
         header {
-            background-color: #d8aaff;
+            background-color: #6E8898FF;
             padding: 3px;
             text-align: center;
             color: black;
@@ -47,7 +47,7 @@
         }
 
         footer {
-            background-color: #ffb6c1;
+            background-color: #D3D0CBFF;
             padding: 5px;
             text-align: center;
             font-size: 16px;
