--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
         <p>Company's Owners:Abiha Malik</p>
         <p>Join on FaceBook: <a href="https://www.facebook.com/share/p/cyCPdqZDd9sNKDcJ/?mibextid=xfxF2i">Facebook</a></p>
     <a href="https://chat.whatsapp.com/EkASj5aDzDj18U4Au7umf0">Join our WhatsApp group</a>
+    <a href="mailto:elegance.fashion05@gmail.com">elegance.fashion05@gmail.com</a>
 
     </footer>
     <div class="background-image"></div>
