--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
             font-size: 3em;
             animation: neon 1s infinite alternate;
             color: black;
+             font-weight: normal; /* Change this to 'normal' for normal style */
+            
         }
 
         .background-image {
