--- a/index.html
+++ b/index.html
@@ -201,10 +201,10 @@
 
 
     <form id="name-form" style="text-align: center;">
-        <p style="font-weight: bold; font-size: 24px; color: red;">Enter your name here: <input type="text" id="name-input" required></p>
+        <p style="font-weight: bold; font-size: 24px; color: red;">Let us know your good name: <input type="text" id="name-input" required></p>
         <button type="submit">Submit</button>
     </form>
-    <p id="greeting-message" style="text-align: center; font-weight: bold; font-size: 24px; color: red;"></p>
+    <p id="greeting-message" style="text-align: center; font-weight: bold; font-size: 24px; color: #2E5266FF;"></p>
 
     <a href="#" class="shop-now-button" onclick="showShopNowInterface(); return false;">SHOP NOW</a>
 
@@ -897,7 +897,7 @@
                     button.style.display = 'inline-block';
                 });
             } else {
-                document.getElementById('greeting-message').textContent = 'AOA ' + name + '! Good to see you :)';
+                document.getElementById('greeting-message').textContent = 'AOA ' + name + '!Your presence always adds joy to our shopping center^_^Get ready for a delightful shopping experience tailored just for you :>';
             }
         });
     </script>
