--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
 
     <form id="name-form" style="text-align: center;">
-        <p style="font-weight: bold; font-size: 24px; color: red;">Let us know your good name: <input type="text" id="name-input" required></p>
+        <p style="font-weight: bold; font-size: 24px; color: #E26274;">Let us know your good name: <input type="text" id="name-input" required></p>
         <button type="submit">Submit</button>
     </form>
     <p id="greeting-message" style="text-align: center; font-weight: bold; font-size: 24px; color: #2E5266FF;"></p>
