--- a/index.html
+++ b/index.html
@@ -161,7 +161,20 @@
         <div class="right">
             <a href="#" onclick="alert('Welcome !!!'); return false;">Home</a>
             <a href="#" onclick="alert('Scroll down!'); return false;">About</a>
-            <a href="#" onclick="alert('Feel free to text us on the numbers provided below :>'); return false;">Contact</a>
+            <a href="#" onclick="alert('1:Men
+Shoes 
+Ready to wear 
+Unstitched dress
+
+2:Women
+ Ready to wear
+ Unstitched dress
+Jewelry 
+Shoes
+
+3:Home 
+
+Accessories'); return false;">Categories</a>
         </div>
         <div class="clear"></div>
         <h1>ELEGANCE FASHION</h1>
