--- a/index.html
+++ b/index.html
@@ -162,19 +162,19 @@
             <a href="#" onclick="alert('Welcome !!!'); return false;">Home</a>
             <a href="#" onclick="alert('Scroll down!'); return false;">About</a>
             <a href="#" onclick="alert('1:Men
-Shoes 
-Ready to wear 
-Unstitched dress
+~Shoes 
+~Ready to wear 
+~Unstitched dress
 
 2:Women
- Ready to wear
- Unstitched dress
-Jewelry 
-Shoes
+~Ready to wear
+~Unstitched dress
+~Jewelry 
+~Shoes
 
 3:Home 
 
-Accessories'); return false;">Categories</a>
+~Accessories'); return false;">Categories</a>
         </div>
         <div class="clear"></div>
         <h1>ELEGANCE FASHION</h1>
