--- a/index.html
+++ b/index.html
@@ -159,22 +159,10 @@
     <header>
         <div class="left"></div>
         <div class="right">
-            <a href="#" onclick="alert('Welcome !!!'); return false;">Home</a>
-            <a href="#" onclick="alert('Scroll down!'); return false;">About</a>
-            <a href="#" onclick="alert('1:Men
-~Shoes 
-~Ready to wear 
-~Unstitched dress
+          <a href="javascript:void(0)" onclick="alert('Welcome !!!'); return false;">Home</a>
+<a href="javascript:void(0)" onclick="alert('Scroll down!'); return false;">About</a>
+<a href="javascript:void(0)" onclick="alert('1:Men\n~Shoes\n~Ready to wear\n~Unstitched dress\n\n2:Women\n~Ready to wear\n~Unstitched dress\n~Jewelry\n~Shoes\n\n3:Home\n~Accessories'); return false;">Categories</a>
 
-2:Women
-~Ready to wear
-~Unstitched dress
-~Jewelry 
-~Shoes
-
-3:Home 
-
-~Accessories'); return false;">Categories</a>
         </div>
         <div class="clear"></div>
         <h1>ELEGANCE FASHION</h1>
