--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             font-size: 3em;
             animation: neon 1s infinite alternate;
             color: black;
-             font-weight: normal; /* Change this to 'normal' for normal style */
+             font-weight: bold; /* Change this to 'normal' for normal style */
             
         }
 
