--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
             Immerse yourself in a world where quality reigns supreme, where every detail is carefully considered to ensure that you not only look but also feel your best. With our commitment to excellence and dedication to customer satisfaction, we invite you to explore our collection and discover the true essence of luxury fashion.
         </p>
     </div>
+     <img src="img 0.5.jpg" alt="Image 0.5" style="max-width: 100%; margin-bottom: 10px;">
 </div>
 
 
