--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             animation: neon 1s infinite alternate;
             color: black;
              font-weight: bold; /* Change this to 'normal' for normal style */
+            text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #FFD700, 0 0 70px #FFD700, 0 0 80px #FFD700, 0 0 100px #FFD700, 0 0 150px #FFD700;
             
         }
 
