--- a/index.html
+++ b/index.html
@@ -58,19 +58,16 @@
             width: 100%;
         }
 
-        @keyframes neon {
-            0% {
-                text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #ff00e0, 0 0 70px #ff00e0, 0 0 80px #ff00e0, 0 0 100px #ff00e0, 0 0 150px #ff00e0;
-            }
+       @keyframes glow {
+    from {
+        text-shadow: 0 0 10px #FFD700, 0 0 20px #FFD700, 0 0 30px #FFD700, 0 0 40px #FFD700, 0 0 70px #FFD700, 0 0 80px #FFD700, 0 0 100px #FFD700, 0 0 150px #FFD700;
+    }
 
-            50% {
-                text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ff00e0, 0 0 35px #ff00e0, 0 0 40px #ff00e0, 0 0 50px #ff00e0, 0 0 75px #ff00e0;
-            }
+    to {
+        text-shadow: 0 0 20px brown, 0 0 30px brown, 0 0 40px brown, 0 0 70px brown, 0 0 80px brown, 0 0 100px brown, 0 0 150px brown, 0 0 300px brown;
+    }
+}
 
-            100% {
-                text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #ff00e0, 0 0 70px #ff00e0, 0 0 80px #ff00e0, 0 0 100px #ff00e0, 0 0 150px #ff00e0;
-            }
-        }
 
         h1 {
             font-size: 3em;
