--- a/index.html
+++ b/index.html
@@ -58,15 +58,16 @@
             width: 100%;
         }
 
- @keyframes glow {
+@keyframes glow {
     from {
         text-shadow: 0 0 10px #FFFFFF, 0 0 20px #FFFFFF, 0 0 30px #FFFFFF, 0 0 40px #FFFFFF, 0 0 70px #FFFFFF, 0 0 80px #FFFFFF, 0 0 100px #FFFFFF, 0 0 150px #FFFFFF;
     }
 
     to {
-        text-shadow: 0 0 20px brown, 0 0 30px brown, 0 0 40px brown, 0 0 70px brown, 0 0 80px brown, 0 0 100px brown, 0 0 150px brown, 0 0 300px brown;
+        text-shadow: 0 0 20px #FFFFFF, 0 0 30px #FFFFFF, 0 0 40px #FFFFFF, 0 0 70px #FFFFFF, 0 0 80px #FFFFFF, 0 0 100px #FFFFFF, 0 0 150px #FFFFFF, 0 0 300px brown;
     }
 }
+
 
 
         h1 {
