--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@ h1 {
     animation: neon 1s infinite alternate;
     color: black;
     font-weight: bold; /* Change this to 'normal' for normal style */
-   text-shadow: 0 0 10px #6B4423, 0 0 20px #6B4423, 0 0 30px #6B4423, 0 0 40px #6B4423, 0 0 70px #6B4423, 0 0 80px #6B4423, 0 0 100px #6B4423, 0 0 150px #6B4423;
+ text-shadow: 0 0 10px #FFFFFF, 0 0 20px #FFFFFF, 0 0 30px #FFFFFF, 0 0 40px #FFFFFF, 0 0 70px #FFFFFF, 0 0 80px #FFFFFF, 0 0 100px #FFFFFF, 0 0 150px #FFFFFF;
+
 
 }
 
