--- a/index.html
+++ b/index.html
@@ -59,13 +59,14 @@
         }
 @keyframes glow {
     from {
-        text-shadow: 0 0 10px #6B4423, 0 0 20px #6B4423, 0 0 30px #6B4423, 0 0 40px #6B4423, 0 0 70px #6B4423, 0 0 80px #6B4423, 0 0 100px #6B4423, 0 0 150px #6B4423;
+        text-shadow: 0 0 10px #FFFFFF, 0 0 20px #FFFFFF, 0 0 30px #FFFFFF, 0 0 40px #FFFFFF, 0 0 70px #FFFFFF, 0 0 80px #FFFFFF, 0 0 100px #FFFFFF, 0 0 150px #FFFFFF;
     }
 
     to {
-        text-shadow: 0 0 20px #6B4423, 0 0 40px #6B4423, 0 0 60px #6B4423, 0 0 80px #6B4423, 0 0 100px #6B4423, 0 0 120px #6B4423, 0 0 150px #6B4423, 0 0 300px #6B4423;
+        text-shadow: 0 0 20px #FFFFFF, 0 0 40px #FFFFFF, 0 0 60px #FFFFFF, 0 0 80px #FFFFFF, 0 0 100px #FFFFFF, 0 0 120px #FFFFFF, 0 0 150px #FFFFFF, 0 0 300px #FFFFFF;
     }
 }
+
 
 
 
