--- a/index.html
+++ b/index.html
@@ -224,6 +224,8 @@ h1 {
             <li><strong>Cash on Delivery:</strong> Pay with cash when your order is delivered to your doorstep. No advance payment required.</li>
             <li><strong>Advance Payment:</strong> Secure your order by making an advance payment online. Choose this option for a seamless checkout process. Advance Payment: 03089885436 Jazzcash Account</li>
         </ul>
+         <a href="easypaisa://03089885436">Pay with Easypaisa</a>
+<a href="jazzcash://03089885436">Pay with Jazzcash</a>
     </div>
 
     <a href="#" class="shop-now-button" onclick="showShopNowInterface(); return false;">SHOP NOW</a>
