--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ h1 {
         <div class="right">
           <a href="javascript:void(0)" onclick="alert('Welcome !!!'); return false;">Home</a>
 <a href="javascript:void(0)" onclick="alert('Scroll down!'); return false;">About</a>
-<a href="javascript:void(0)" onclick="alert('1:Men\n~Shoes\n~Ready to wear\n~Ladies HandBags\n~Unstitched dress\n\n2:Women\n~Ready to wear\n~Unstitched dress\n~Jewelry\n~Shoes\n\n3:Home\n~Accessories'); return false;">Categories</a>
+<a href="javascript:void(0)" onclick="alert('1:Men\n~Shoes\n~Ready to wear\n~Unstitched dress\n\n2:Women\n~Ready to wear\n~Ladies HandBags\n~Unstitched dress\n~Jewelry\n~Shoes\n\n3:Home\n~Accessories'); return false;">Categories</a>
 
         </div>
         <div class="clear"></div>
