--- a/index.html
+++ b/index.html
@@ -230,6 +230,12 @@ h1 {
     <a href="#" class="shop-now-button" onclick="showShopNowInterface(); return false;">SHOP NOW</a>
 
     <div class="shop-now-interface" id="shop-now-interface">
+          <!-- Category Section -->
+    <div style="text-align: center; margin: 20px 0;">
+        <a href="women.html" class="shop-now-button" style="display: inline-block; margin: 10px;">Women</a>
+        <a href="men.html" class="shop-now-button" style="display: inline-block; margin: 10px;">Men</a>
+        <a href="home.html" class="shop-now-button" style="display: inline-block; margin: 10px;">Home</a>
+    </div>
         <!-- Image containers with update buttons -->
         <!-- Display images 1 to 50 -->
          <div>
