--- a/women.html
+++ b/women.html
@@ -14,6 +14,83 @@
         <h1>Welcome to the Women's Section!</h1>
         <p>Explore our collection for women.</p>
     </div>
+    <div>
+                                <img src="./img 2.jpg" alt="">
+                            </div>
+                            <div>
+                                <img src="./img 3.jpg" alt="">
+                            </div>
+                            <!-- Display images from 4 to 50 -->
+                            <div>
+                                <img src="./img 4.jpg" alt="">
+                            </div>
+                                <img src="./img 5.jpg" alt="">
+                            </div>
+                            <div>
+                                <img src="./img 6.jpg" alt="">
+                            </div>
+                            <!-- Display images from 4 to 50 -->
+                            <div>
+                                <img src="./img 4.jpg" alt="">
+                            </div>
+                            <div>
+                                <img src="./img 5.jpg" alt="">
+                            </div>
+                            <div>
+                                <img src="./img 6.jpg" alt="">
+                            </div>
+                            <div>
+                                <img src="./img 7.jpg" alt="">
+                            </div>
+                            <div>
+                                <img src="./img 8.jpg" alt="">
+                            </div>
+                            <div>
+                                <img src="./img 9.jpg" alt="">
+                            </div>
+                            <div>
+                                <img src="./img 10.jpg" alt="">
+                            </div>
+                            <div>
+                                <img src="./img 11.jpg" alt="">
+                            </div>
+                            <div>
+                                <img src="./img 12.jpg" alt="">
+                            </div>
+                            <div>
+                                <img src="./img 13.jpg" alt="">
+                            </div>
+                            <div>
+                                <img src="./img 14.jpg" alt="">
+                            </div>
+                            <div>
+                                <img src="./img 15.jpg" alt="">
+                            </div>
+                            <div>
+                                <img src="./img 16.jpg" alt="">
+                            </div>
+                            <div>
+                                <img src="./img 17.jpg" alt="">
+                            </div>
+                            <div>
+                                <img src="./img 18.jpg" alt="">
+                            </div>
+                            <div>
+                                <img src="./img 19.jpg" alt="">
+                            </div>
+                            <div>
+                                <img src="./img 20.jpg" alt="">
+                            </div>
+                            <div>
+                                <img src="./img 21.jpg" alt="">
+                            </div>
+                            <div>
+                                <img src="./img 22.jpg" alt="">
+                            </div>
+                            <div>
+                                <img src="./img 23.jpg" alt="">
+                            </div>
+                            <div>
 </body>
 
 </html>
