--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@ h1 {
 
 
 }
-        .background-image {
+     .background-image {
             position: absolute;
             top: 0;
             left: 0;
             width: 100vw;
-            height: calc(100vh - 60px); /* Adjust the value (60px) based on your header height */
-            background: url('img 0.jpg') center/contain no-repeat;
+            height: 100vh;
+            background: url('img 0.jpg') center/cover no-repeat;
             z-index: -1;
         }
 
@@ -90,18 +90,17 @@ h1 {
 <img src="img 0.jpg" alt="Image 0">
 
       .about-us-text {
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-    text-align: center;
-    padding: 20px;
-    background-color: rgba(255, 255, 255, 0.8);
-    border-radius: 10px;
-    max-width: 90%;
-    margin: 500x auto; /* Adjust the margin-top value to move it down */
-    overflow-y: scroll;
-    max-height: 70vh;
-    margin-top: 500%;
-}
+            font-family: Arial, sans-serif;
+            font-size: 16px;
+            text-align: center;
+            padding: 20px;
+            background-color: rgba(255, 255, 255, 0.8);
+            border-radius: 10px;
+            max-width: 90%;
+            margin: 0 auto; /* Center the text horizontally */
+            overflow-y: scroll;
+            max-height: 70vh;
+        }
 
 
         .shop-now-button {
