--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ h1 {
     </header>
     <footer>
         <p>Contact Us:<a href="https://wa.me/923558346493">Chat on WhatsApp</a></p>
-        <p>Company's Owners:Fatima Chaudhary</p>
+        <p>Company's Owners:ABIHA</p>
     <a href="https://chat.whatsapp.com">Join our WhatsApp group</a>
     <a href="mailto:elegance.fashion@gmail.com">elegance.fashion05@gmail.com</a>
 
@@ -230,6 +230,13 @@ h1 {
     <a href="#" class="shop-now-button" onclick="showShopNowInterface(); return false;">SHOP NOW</a>
 
     <div class="shop-now-interface" id="shop-now-interface">
+          <!-- Category Section -->
+    <div style="text-align: center; margin: 20px 0;">
+        <a href="women.html" class="shop-now-button" style="display: inline-block; margin: 10px;">Women</a>
+        <a href="men.html" class="shop-now-button" style="display: inline-block; margin: 10px;">Men</a>
+        <a href="home.html" class="shop-now-button" style="display: inline-block; margin: 10px;">Home</a>
+    </div>
+</div>
         <!-- Image containers with update buttons -->
         <!-- Display images 1 to 50 -->
          <div>
