--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ h1 {
         }
 
         .shop-now-button:hover {
-            color: brown;
+            color: FFDAE9;
             background-color: skyblue;
             animation: glow 1s ease infinite alternate;
         }
