--- a/index.html
+++ b/index.html
@@ -175,9 +175,10 @@ h1 {
     </header>
     <footer>
         <p>Contact Us:<a href="https://wa.me/923558346493">Chat on WhatsApp</a></p>
-        <p>Company's Owners:ABIHA</p>
-    <a href="https://chat.whatsapp.com">Join our WhatsApp group</a>
-    <a href="mailto:elegance.fashion@gmail.com">elegance.fashion05@gmail.com</a>
+        <p>Company's Owners:ABIHA MALIK</p>
+   <a href="https://chat.whatsapp.com/EkASj5aDzDj18U4Au7umf0" target="_blank">Join our WhatsApp group</a>
+
+    <a href="mailto:elegance.fashion05@gmail.com">elegance.fashion05@gmail.com</a>
 
     </footer>
     <div class="background-image"></div>
@@ -241,307 +242,7 @@ h1 {
         <!-- Display images 1 to 50 -->
 
 
-    <div>
-            <img src="./img 101.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 102.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 103.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 104.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 105.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 106.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 107.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 108.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 109.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 110.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 111.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 112.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 113.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 114.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 115.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 116.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 117.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 118.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 119.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 120.jpg" alt="">
-        </div>
-    <div>
-            <img src="./img 121.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 122.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 123.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 124.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 125.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 126.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 127.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 128.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 129.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 130.jpg" alt="">
-        </div>
-    <div>
-            <img src="./img 131.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 132.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 133.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 134.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 135.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 136.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 137.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 138.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 139.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 140.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 141.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 142.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 143.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 144.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 145.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 146.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 147.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 148.jpg" alt="">
-        </div>
-        <div>
-            
-            <img src="./img 149.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 150.jpg" alt="">
-        </div>
-     <div>
-            <img src="./img 151.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 152.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 153.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 154.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 155.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 156.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 157.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 158.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 159.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 160.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 161.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 162.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 163.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 164.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 165.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 166.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 167.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 168.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 169.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 170.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 171.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 172.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 173.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 174.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 175.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 176.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 177.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 178.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 179.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 180.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 181.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 182.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 183.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 184.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 185.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 186.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 187.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 188.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 189.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 190.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 191.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 192.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 193.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 194.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 195.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 196.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 197.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 198.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 199.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 200.jpg" alt="">
-        </div>
+   
     <div>
     <img src="./img 201.jpg" alt="">
 </div>
