--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@ h1 {
             font-size: 24px;
             font-weight: bold;
             color: skyblue;
-            background-color: brown;
-            border: 2px solid brown;
+            background-color: FFDAE9;
+            border: 2px solid  FFDAE9;
             border-radius: 5px;
             text-align: center;
             cursor: pointer;
@@ -242,159 +242,7 @@ h1 {
         <!-- Display images 1 to 50 -->
 
 
-   
-    <div>
-    <img src="./img 201.jpg" alt="">
-</div>
-<div>
-    <img src="./img 202.jpg" alt="">
-</div>
-<div>
-    <img src="./img 203.jpg" alt="">
-</div>
-<div>
-    <img src="./img 204.jpg" alt="">
-</div>
-<div>
-    <img src="./img 205.jpg" alt="">
-</div>
-<div>
-    <img src="./img 206.jpg" alt="">
-</div>
-<div>
-    <img src="./img 207.jpg" alt="">
-</div>
-<div>
-    <img src="./img 208.jpg" alt="">
-</div>
-<div>
-    <img src="./img 209.jpg" alt="">
-</div>
-<div>
-    <img src="./img 210.jpg" alt="">
-</div>
-<div>
-    <img src="./img 211.jpg" alt="">
-</div>
-<div>
-    <img src="./img 212.jpg" alt="">
-</div>
-<div>
-    <img src="./img 213.jpg" alt="">
-</div>
-<div>
-    <img src="./img 214.jpg" alt="">
-</div>
-<div>
-    <img src="./img 215.jpg" alt="">
-</div>
-<div>
-    <img src="./img 216.jpg" alt="">
-</div>
-<div>
-    <img src="./img 217.jpg" alt="">
-</div>
-<div>
-    <img src="./img 218.jpg" alt="">
-</div>
-<div>
-    <img src="./img 219.jpg" alt="">
-</div>
-<div>
-    <img src="./img 220.jpg" alt="">
-</div>
-<div>
-    <img src="./img 221.jpg" alt="">
-</div>
-<div>
-    <img src="./img 222.jpg" alt="">
-</div>
-<div>
-    <img src="./img 223.jpg" alt="">
-</div>
-<div>
-    <img src="./img 224.jpg" alt="">
-</div>
-<div>
-    <img src="./img 225.jpg" alt="">
-</div>
-<div>
-    <img src="./img 226.jpg" alt="">
-</div>
-<div>
-    <img src="./img 227.jpg" alt="">
-</div>
-<div>
-    <img src="./img 228.jpg" alt="">
-</div>
-<div>
-    <img src="./img 229.jpg" alt="">
-</div>
-<div>
-    <img src="./img 230.jpg" alt="">
-</div>
-<div>
-    <img src="./img 231.jpg" alt="">
-</div>
-<div>
-    <img src="./img 232.jpg" alt="">
-</div>
-<div>
-    <img src="./img 233.jpg" alt="">
-</div>
-<div>
-    <img src="./img 234.jpg" alt="">
-</div>
-<div>
-    <img src="./img 235.jpg" alt="">
-</div>
-<div>
-    <img src="./img 236.jpg" alt="">
-</div>
-<div>
-    <img src="./img 237.jpg" alt="">
-</div>
-<div>
-    <img src="./img 238.jpg" alt="">
-</div>
-<div>
-    <img src="./img 239.jpg" alt="">
-</div>
-<div>
-    <img src="./img 240.jpg" alt="">
-</div>
-<div>
-    <img src="./img 241.jpg" alt="">
-</div>
-<div>
-    <img src="./img 242.jpg" alt="">
-</div>
-<div>
-    <img src="./img 243.jpg" alt="">
-</div>
-<div>
-    <img src="./img 244.jpg" alt="">
-</div>
-<div>
-    <img src="./img 245.jpg" alt="">
-</div>
-<div>
-    <img src="./img 246.jpg" alt="">
-</div>
-<div>
-    <img src="./img 247.jpg" alt="">
-</div>
-<div>
-    <img src="./img 248.jpg" alt="">
-</div>
-<div>
-    <img src="./img 249.jpg" alt="">
-</div>
-<div>
-    <img src="./img 250.jpg" alt="">
-</div>
-    </div>
-                            <style>
+               <style>
                                 /* Center images on mobile screens */
                                 @media (max-width: 768px) {
                                     body {
