--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ h1 {
 
         .shop-now-button:hover {
             color: FFDAE9;
-            background-color: skyblue;
+            background-color: FFDAE9;
             animation: glow 1s ease infinite alternate;
         }
 
