--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ h1 {
             padding: 10px 20px;
             font-size: 24px;
             font-weight: bold;
-            color: skyblue;
+            color: #FFDAE9;
             background-color: FFDAE9;
             border: 2px solid  FFDAE9;
             border-radius: 5px;
