--- a/index.html
+++ b/index.html
@@ -234,7 +234,8 @@ h1 {
     <a href="home.html" class="shop-now-button" style="display: inline-block; margin: 10px;">Home</a>
 </div>
 
-       
+     <a href="#" class="shop-now-button" onclick="showShopNowInterface(); return false;">SHOP NOW</a>
+   
 
 
 
