--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@ h1 {
             text-align: center;
             cursor: pointer;
             text-decoration: none;
+             margin-bottom: 50px;
         }
 
         .shop-now-button:hover {
