--- a/home.html
+++ b/home.html
@@ -16,6 +16,8 @@
     </div>
       <div>
     <img src="./img 201.jpg" alt="">
+          <p>   Water bottles Available now at our store.
+ Rs:2199/-      </p>
 </div>
 <div>
     <img src="./img 202.jpg" alt="">
