--- a/women.html
+++ b/women.html
@@ -23,6 +23,11 @@
                                     </div>
                             <div>
                                 <img src="./img 2.jpg" alt="">
+                                
+                                   <p>Elevate your style with stunning women’s jewelry💍 
+Mala set
+fine quality 
+PKR 2500/-</p>
                             </div>
                             <div>
                                 <img src="./img 3.jpg" alt="">
