--- a/women.html
+++ b/women.html
@@ -24,16 +24,15 @@
                             <div>
                                 <img src="./img 2.jpg" alt="">
                                 
-                                   <p>Elevate your style with stunning women’s jewelry💍 
-Mala set
-fine quality 
-PKR 2500/-</p>
+                            
                             </div>
                             <div>
                                 <img src="./img 3.jpg" alt="">
                             </div>
                             <!-- Display images from 4 to 50 -->
                             <div>
+                                <p>Elevate your style with stunning women’s jewelry💍 
+Mala set free delivery just in 2500/-pkr </p>
                                 <img src="./img 4.jpg" alt="">
                             </div>
                                 <img src="./img 5.jpg" alt="">
