--- a/men.html
+++ b/men.html
@@ -6,9 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Men's Section</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        .shop-now-interface {
+            text-align: center;
+            padding: 20px;
+        }
+
+        .image-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 10px;
+            padding: 10px;
+        }
+
+        .image-container img {
+            width: 100%;
+            max-width: 400px; /* Adjust the max-width as needed */
+            height: auto;
+            display: block;
+        }
+    </style>
 </head>
 
 <body>
+
     <div class="shop-now-interface" id="shop-now-interface">
         <!-- Men-specific content here -->
         <h1>Welcome to the Men's Section!</h1>
