--- a/men.html
+++ b/men.html
@@ -66,6 +66,27 @@
         </div>
         <div>
             <img src="./img 108.jpg" alt="">
+            <p>Q - STAR
+            
+Distinctive sub-brands under the esteemed Umbrella of Libas e Yousaf. 
+
+Q - STAR  showcases a harmonious blend of classic and avant-garde fashion, 
+ These Articles embodies dynamic and trend-setting Colors. Elevate your wardrobe with this sub-brand, where style meets individuality, and sartorial excellence is redefined within the legacy of #Libas-e-Yousaf •••
+ #Qstar
+#Libasyousaf
+Season
+SUMMER (wash’n wear)
+Price PKR 2530/- Only 
+🏷Tag Price 5460/-
+(Without delivery)
+
+Package Includes
+Libas-e-Yousuf branded box 
+Fabric Length 4 Meters
+Width 52-54 Inches 
+Brand tags, cards and ribbon
+Metal molded buttons 
+100% guarantee for color and fabric</p>
         </div>
         <div>
             <img src="./img 109.jpg" alt="">
