--- a/men.html
+++ b/men.html
@@ -19,22 +19,15 @@
 
         .image-container {
             display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
+            flex-direction: column;
+            align-items: center;
             gap: 10px;
             padding: 10px;
         }
 
-        .image-wrapper {
-            width: 100%;
-            max-width: 400px; /* Adjust as needed */
+        .image-container img {
+            width: 100vw;
             height: auto;
-        }
-
-        .image-wrapper img {
-            width: 100%;
-            height: auto;
-            object-fit: cover; /* Ensures the image covers the container */
         }
     </style>
 </head>
