--- a/men.html
+++ b/men.html
@@ -10,9 +10,7 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            overflow-x: hidden; /* Prevent horizontal scrolling */
         }
 
         .shop-now-interface {
@@ -21,16 +19,17 @@
         }
 
         .image-container {
-            width: 100%;
             display: flex;
             flex-direction: column;
             align-items: center;
             gap: 10px;
             padding: 10px;
+            width: 100%; /* Ensure container takes full width */
         }
 
         .image-container img {
             width: 100%;
+            max-width: 100%; /* Ensure images don't overflow */
             height: auto;
         }
     </style>
