--- a/men.html
+++ b/men.html
@@ -29,8 +29,9 @@
 
         .image-container img {
             width: 100%;
-            max-width: 100%; /* Ensure images don't overflow */
+            max-width: 100%;
             height: auto;
+            object-fit: contain; /* Ensure the entire image is visible without distortion */
         }
     </style>
 </head>
