--- a/men.html
+++ b/men.html
@@ -28,9 +28,7 @@
         }
 
         .image-container img {
-            max-width: 100%;
-            max-height: 100vh; /* Ensure the image does not exceed the viewport height */
-            width: auto;
+            max-width: 100%; /* Ensure images resize proportionally to fit the screen */
             height: auto;
             object-fit: contain; /* Ensure the entire image is visible */
         }
