--- a/men.html
+++ b/men.html
@@ -28,8 +28,8 @@
         }
 
         .image-container img {
-            max-width: 100%; /* Ensure images resize proportionally to fit the screen */
-            height: auto;
+            max-width: 50%; /* Ensure images resize proportionally to fit the screen */
+            height: 50;
             object-fit: contain; /* Ensure the entire image is visible */
         }
     </style>
