--- a/men.html
+++ b/men.html
@@ -5,36 +5,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Men's Section</title>
+    <title>Image Gallery</title>
     <style>
         body {
             margin: 0;
+            padding: 0;
             font-family: Arial, sans-serif;
-            overflow-x: hidden; /* Prevent horizontal scrolling */
-        }
-
-        .shop-now-interface {
-            text-align: center;
-            padding: 20px;
         }
 
         .image-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
             display: flex;
-            flex-direction: column;
+            justify-content: center;
             align-items: center;
-            gap: 10px;
-            padding: 10px;
-            width: 100%;
+            background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent black background */
+            z-index: 9999;
         }
 
         .image-container img {
-            max-width: 50%; /* Ensure images resize proportionally to fit the screen */
-            height: 50;
-            object-fit: contain; /* Ensure the entire image is visible */
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain; /* Maintain aspect ratio */
+        }
+
+        .close-btn {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            color: white;
+            font-size: 24px;
+            cursor: pointer;
+            z-index: 10000;
         }
     </style>
 </head>
 <body>
+
     <div class="shop-now-interface" id="shop-now-interface">
         <!-- Men-specific content here -->
         <h1>Welcome to the Men's Section!</h1>
