--- a/men.html
+++ b/men.html
@@ -27,8 +27,8 @@
         }
 
         .image-container img {
-            max-width: 100%;
-            max-height: 100%;
+            max-width: 100vw; /* Ensure the image covers the full width of the viewport */
+            max-height: 100vh; /* Ensure the image covers the full height of the viewport */
             object-fit: contain; /* Maintain aspect ratio */
         }
 
