--- a/men.html
+++ b/men.html
@@ -16,18 +16,19 @@
         .image-container {
             position: fixed;
             top: 0;
-            left: 0;
-            width: 100vw;
+            left: 50%; /* Position the container from the center */
+            width: 50vw; /* Half of the viewport width */
             height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
             background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent black background */
             z-index: 9999;
+            transform: translateX(-50%); /* Move the container back to the left by half of its width */
         }
 
         .image-container img {
-            max-width: 100vw; /* Ensure the image covers the full width of the viewport */
+            max-width: 100%; /* Ensure the image covers the full width of the container */
             max-height: 100vh; /* Ensure the image covers the full height of the viewport */
             object-fit: contain; /* Maintain aspect ratio */
         }
